Bevel segments bug #49183

Closed
opened 2016-08-28 11:25:36 +02:00 by Adrian Rutkowski · 10 comments

System Information
win10, gtx 1070

Blender Version
Broken: fef0cd8 , problem started after recent 2.77.3 bevel changes

Short description of error
Segments are not added correctly
the first segment step is always incorrect, and sometimes segments number getting saved and called randomly called .

to replicate

add cube, select edge, press ctrl+B and now in edit mode press +
this will not add a segment, it will be added after next press though, If You now press - and set them back to 0 they will be added in correct way from now on(for that modal session)

its not all though
sometimes segments are randomly saved
so if You set lets say 7 segments while beveling then when You try to bevel other edge it will start with 7 or 8 or 6 even if f6 was not used.

**System Information** win10, gtx 1070 **Blender Version** Broken: fef0cd8 , problem started after recent 2.77.3 bevel changes **Short description of error** Segments are not added correctly the first segment step is always incorrect, and sometimes segments number getting saved and called randomly called . to replicate add cube, select edge, press ctrl+B and now in edit mode press + this will not add a segment, it will be added after next press though, If You now press - and set them back to 0 they will be added in correct way from now on(for that modal session) its not all though sometimes segments are randomly saved so if You set lets say 7 segments while beveling then when You try to bevel other edge it will start with 7 or 8 or 6 even if f6 was not used.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @niewinny

Added subscriber: @niewinny

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

I was going to post about the same issue and I think it started way before 2.77.3. I also want to point out that first segment will not be added when you scroll mouse up once forcing you to scroll multiple times to add a segment. When you start a new bevel session and scroll your mouse or press +- on your numpad it will not change zero segments to one, but will add as many segments as in previous session. These problems don't exist in 2.77a abf6f08.

I was going to post about the same issue and I think it started way before 2.77.3. I also want to point out that first segment will not be added when you scroll mouse up once forcing you to scroll multiple times to add a segment. When you start a new bevel session and scroll your mouse or press +\- on your numpad it will not change zero segments to one, but will add as many segments as in previous session. These problems don't exist in 2.77a abf6f08.

Added subscribers: @howardt, @mont29

Added subscribers: @howardt, @mont29
Howard Trickey was assigned by Bastien Montagne 2016-08-28 16:56:00 +02:00

BevelData.segments is not initialized - but not sure there isn’t more to fix here, will let you handle it @howardt. ;)

`BevelData.segments` is not initialized - but not sure there isn’t more to fix here, will let you handle it @howardt. ;)
Member

Yes, I can fix by initializing BevelData.segments. But I think there is indeed something more to fix here, so I'm not going to close this yet, but I will commit an immediate fix to the uninitialized problem (and the problem of + not having an effect).

The remaining problem is some inconsistency with when a new bevel starts with the last-used values. If you set values in the tool panel (or F6 panel), the next control-B will start a bevel with the just-used values. But if you do the bevel by adjusting the mouse and using +/- numpad keys for segments, the panels show the last-used values but the bevel itself starts at a zero value and 1 segment.

Yes, I can fix by initializing BevelData.segments. But I think there is indeed something more to fix here, so I'm not going to close this yet, but I will commit an immediate fix to the uninitialized problem (and the problem of + not having an effect). The remaining problem is some inconsistency with when a new bevel starts with the last-used values. If you set values in the tool panel (or F6 panel), the next control-B will start a bevel with the just-used values. But if you do the bevel by adjusting the mouse and using +/- numpad keys for segments, the panels show the last-used values but the bevel itself starts at a zero value and 1 segment.
Howard Trickey was unassigned by Dalai Felinto 2019-12-23 16:37:02 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-01-21 20:32:51 +01:00

I tried to reproduce the second bug described "sometimes segments are randomly saved".
In blender 2.79b, the number of segments the second time you use bevel always returns to 1 (different from what has been described but similar).
In blender 2.83 it seems to work correctly saving the previously edited configuration.

So I believe that the problem has been fixed already.
If the problem persists we can re-open the report.

I tried to reproduce the second bug described "sometimes segments are randomly saved". In blender 2.79b, the number of segments the second time you use bevel always returns to 1 (different from what has been described but similar). In blender 2.83 it seems to work correctly saving the previously edited configuration. So I believe that the problem has been fixed already. If the problem persists we can re-open the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49183
No description provided.