Fix for Bevel segments bug T49183; but doesn't fix whole report yet.